--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,7 @@ script:
   - npm run build
 install:
   - npm install -g firebase-tools
+notifications:
+  slack: "$SLACK_ACCOUNT":"$SLACK_TOKEN"
 after_success:
   - firebase deploy --token "$FIREBASE_TOKEN"
