--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vuetify": "^2.2.17"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.1",
     "@vue/cli-plugin-babel": "~4.2.0",
     "@vue/cli-plugin-eslint": "~4.2.0",
     "@vue/cli-plugin-router": "^4.2.3",
